<resources>
    <string name="app_name">Medox Network</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="wait_processing">Please wait…</string>
    <string name="home">Home</string>
    <string name="or">OR</string>
    <string name="register_now">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="login_using_username">Login using Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="login_desc">You have to Sign In with Username(Username is cerated by you) and password.</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_referral_code">Enter your Referral Code</string>
    <string name="enter_email_address">Enter Email Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="funding_wallet">Funding Wallet</string>
    <string name="bonus_wallet">Bonus Wallet</string>
    <string name="reward_wallet">Reward Wallet</string>
    <string name="contecttosupport">Contact to support</string>
    <string name="team_levels">Team Levels</string>
    <string name="total_team_members">Total Team Members</string>
    <string name="changepassword">Change Password</string>
    <string name="myprofile">My Profile</string>
    <string name="statistics">Statistics</string>
    <string name="team">Team</string>
    <string name="wallethistory">Wallet History</string>
    <string name="yourwallet">Your Wallet</string>
    <string name="logout">Logout</string>

    <string name="qr_code">qr_code</string>
    <string name="enter_your_info">Enter your info</string>
    <string name="generate_qr_code">Generate QR Code</string>
    <string name="up_lime">up-line</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="select_withdraw_type">Select withdraw type</string>
    <string name="withdraw_fund">Withdraw Fund</string>

    <string-array name="type_withdraw">
        <item>USDT</item>
        <item>MNT</item>
    </string-array>

</resources>