<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_15sdp"
    android:layout_marginTop="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_15sdp"
    android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_username"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_desc"
                    android:textColor="@color/dark_gray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/edit_bg"
                    android:padding="@dimen/_4sdp">


                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/countrycode3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textSize="@dimen/_12sdp"
                        app:ccp_defaultNameCode="IN"
                        app:ccp_showFlag="true" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/_14sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/countrycode3"
                        android:background="@color/dark_gray2" />

                    <EditText
                        android:id="@+id/editemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/view3"
                        android:background="@color/white"
                        android:hint="@string/enter_username"
                        android:inputType="text"
                        android:maxLength="10"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textColorHint="#757575"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/login_using_username"
                        android:textColor="@color/purple_200" />
                </LinearLayout>

                <Button
                    android:id="@+id/sendotp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/purple_200"
                    android:drawableTint="@color/white"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height=".5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".5"
                        android:background="@color/pinkishgray" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_marginRight="@dimen/_5sdp"
                        android:text="@string/or" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height=".5dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight=".5"
                        android:background="@color/pinkishgray" />

                </LinearLayout>

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:backgroundTint="@color/orange"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/register_now"
                    android:textAllCaps="false"
                    android:textColor="@color/white">
                </Button>

</LinearLayout>
