<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_48sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_now"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black_500"
                    android:textSize="@dimen/_12sdp"
                    android:layout_gravity="center_horizontal" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Let's Start to Earn Medox Network"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Referral Code"
                    android:textColor="@color/black_500"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_bg"
                    android:padding="@dimen/_4sdp">

                    <EditText
                        android:id="@+id/referralcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:hint="@string/enter_your_referral_code"
                        android:inputType="text"
                        android:maxLength="30"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Full Name"
                    android:textColor="@color/black_500"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_bg"
                    android:padding="@dimen/_4sdp">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:hint="Enter full name"
                        android:inputType="textCapSentences"
                        android:maxLength="30"

                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textColor="@color/black_500"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_bg"
                    android:padding="@dimen/_4sdp">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:hint="@string/enter_email_address"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Mobile Number"
                    android:textColor="@color/black_500"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_bg"
                    android:padding="@dimen/_4sdp">

                    <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                        android:id="@+id/countrycode3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/purple_500"
                        android:textSize="@dimen/_12sdp"
                        app:ccp_defaultNameCode="IN"
                        app:ccp_showFlag="true" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="1dp"
                        android:layout_height="@dimen/_14sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:layout_toRightOf="@+id/countrycode3"
                        android:background="@color/dark_gray2" />

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/view3"
                        android:background="@color/white"
                        android:hint="Enter mobile number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Username"
                    android:textColor="@color/black_500"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_bg"
                    android:padding="@dimen/_4sdp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:hint="Enter Username"
                        android:inputType="text"
                        android:maxLength="30"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black_500"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_bg"
                    android:padding="@dimen/_4sdp">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:hint="@string/enter_password"
                        android:inputType="text"
                        android:maxLength="30"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirm Password"
                    android:textColor="@color/black_500"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edit_bg"
                    android:padding="@dimen/_4sdp">

                    <EditText
                        android:id="@+id/confpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:background="@color/white"
                        android:hint="Enter confirm password"
                        android:inputType="text"
                        android:maxLength="30"
                        android:paddingLeft="@dimen/_10sdp"
                        android:paddingTop="@dimen/_6sdp"
                        android:paddingBottom="@dimen/_6sdp"
                        android:textColor="@color/dark_gray2"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/_12sdp" />
                </RelativeLayout>


                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/round_cornor_button"
                    android:backgroundTint="@color/purple_200"
                    android:drawableTint="@color/white"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="@color/white">

                </Button>

                <LinearLayout
                    android:id="@+id/llsignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/_10sdp"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Already have an account?"
                        android:textStyle="bold"
                        android:textColor="@color/dark_gray2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:text="Sign In"
                        android:textStyle="bold"
                        android:textColor="@color/purple_200" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height=".5dp"
                    android:layout_above="@+id/tc"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/lightgray" />

                <TextView
                    android:id="@+id/tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="By logging in or registering, you agree to our Terms of Service and Privacy Policy."
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>



        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
